tests/baselines/reference/importDeclWithExportModifierAndExportAssignment.errors.txt
==== tests/cases/compiler/importDeclWithExportModifierAndExportAssignment.ts (2 errors) ====
    module x {
        interface c {
        }
    }
    export import a = x.c;
                        ~
!!! importDeclWithExportModifierAndExportAssignment.ts(5,21): error TS2178: Module 'x' has no exported member 'c'.
    export = x;
    ~~~~~~~~~~~
!!! importDeclWithExportModifierAndExportAssignment.ts(6,1): error TS1064: Export assignment not allowed in module with exported element.